Add YouTube playlist link

--- a/rstudio-cloud.html
+++ b/rstudio-cloud.html
@@ -563,6 +563,14 @@ class: middle, inverse
 
 ## More tips
 
+- Make brief screencasts for getting students oriented with the platform (especially if remote teaching)
+
+- or use mine! [Navigating RStudio Cloud on YouTube](https://www.youtube.com/playlist?list=PLNUVZZ6hfXX05Bs80Hg5MjbOPnEFmwiOM)
+
+---
+
+## More tips
+
 - Remind students how to hide the sidebar!
 
 &lt;img src="img/rstudio-cloud-hide-sidebar.png" width="70%" style="display: block; margin: auto;" /&gt;
