--- a/rstudio-cloud.html
+++ b/rstudio-cloud.html
@@ -563,9 +563,13 @@ class: middle, inverse
 
 ## More tips
 
-- Make brief screencasts for getting students oriented with the platform (especially if remote teaching)
+- Make brief screencasts for getting students oriented with the platform (especially if remote teaching), or use mine! 
 
-- or use mine! [Navigating RStudio Cloud on YouTube](https://www.youtube.com/playlist?list=PLNUVZZ6hfXX05Bs80Hg5MjbOPnEFmwiOM)
+.center[
+[Navigating RStudio Cloud on YouTube](https://www.youtube.com/playlist?list=PLNUVZZ6hfXX05Bs80Hg5MjbOPnEFmwiOM)
+]
+
+&lt;img src="img/youtube-playlist.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 ---
 
