--- a/rstudio-cloud.html
+++ b/rstudio-cloud.html
@@ -13,7 +13,7 @@
 class: center, middle, inverse, title-slide
 
 # Teaching R online with RStudio Cloud
-## 🔗 <a href="https://rstd.io/design-ds-class">rstd.io/design-ds-class</a>
+## 🔗 <a href="https://rstd.io/rscloud-webinar">rstd.io/rscloud-webinar</a>
 ### <br> Mine Çetinkaya-Rundel <br> 🐦 <a href="https://twitter.com/minebocek">minebocek</a> <br> 👩‍💻 <a href="https://github.com/mine-cetinkaya-rundel">mine-cetinkaya-rundel</a> <br> ✉️ <a href="mailto:mine@rstudio.com" class="email">mine@rstudio.com</a>
 ### <br> 24 March 2020
 
@@ -27,7 +27,7 @@ layout: true
   
 &lt;div class="my-footer"&gt;
 &lt;span&gt;
-&lt;a href="https://rstd.io/design-ds-class" target="_blank"&gt;rstd.io/design-ds-class&lt;/a&gt;
+&lt;a href="https://rstd.io/rscloud-webinar" target="_blank"&gt;rstd.io/rscloud-webinar&lt;/a&gt;
 &lt;/span&gt;
 &lt;/div&gt; 
 
@@ -622,7 +622,7 @@ background-size: cover
 
 &lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-# 🔗 [rstd.io/design-ds-class](https://rstd.io/design-ds-class)
+# 🔗 [rstd.io/rscloud-webinar](https://rstd.io/rscloud-webinar)
 
 ---
     </textarea>
